--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.2",
     "formik": "^2.2.9",
     "gh-pages": "^5.0.0",
+    "hamburger-react": "^2.5.0",
     "nanoid": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
